--- a/macos/Runner/DebugProfile.entitlements
+++ b/macos/Runner/DebugProfile.entitlements
@@ -8,5 +8,8 @@
 	<true/>
 	<key>com.apple.security.network.server</key>
 	<true/>
+	<!-- Network client access for internet connectivity -->
+	<key>com.apple.security.network.client</key>
+	<true/>
 </dict>
 </plist>
