--- a/macos/Runner/Release.entitlements
+++ b/macos/Runner/Release.entitlements
@@ -4,5 +4,8 @@
 <dict>
 	<key>com.apple.security.app-sandbox</key>
 	<true/>
+	<!-- Network client access for internet connectivity -->
+	<key>com.apple.security.network.client</key>
+	<true/>
 </dict>
 </plist>
